<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.itg.jobcardmanagement.registration.CustomerRegistrationActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
            app:titleEnabled="false">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="visible"
                app:popupTheme="@style/AppTheme.NoActionBar">

                <TextView
                    android:id="@+id/lbl_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="skip"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/textViewSize"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </android.support.v7.widget.Toolbar>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_collapseMode="parallax">

                <RelativeLayout
                    android:id="@+id/rl_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/lbl_car"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="Add Your Car"
                        android:textColor="@color/white"
                        android:textSize="18dp" />


                    <com.itg.jobcardmanagement.widget.PinEntryEditText
                        android:id="@+id/edt_registration"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/lbl_car"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/bg_edittext"
                        android:cursorVisible="false"
                        android:drawablePadding="08dp"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:lines="2"
                        android:maxLength="12"
                        android:maxLines="2"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/textViewSize"
                        app:pinAnimationType="fromBottom"
                        app:pinCharacterSpacing="2dp" />


                    <TextView
                        android:id="@+id/lbl_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/edt_registration"
                        android:layout_alignStart="@+id/edt_registration"
                        android:layout_below="@+id/edt_registration"
                        android:layout_marginEnd="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="30dp"
                        android:drawableEnd="@drawable/ic_edit_black_24dp"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/ic_edit_black_24dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/regis_no"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorGray"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/edt_thesis"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/lbl_registration"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_edittext"
                        android:gravity="start"
                        android:inputType="text"
                        android:lines="2"
                        android:maxLines="2"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/textViewSize">

                    </EditText>

                    <TextView
                        android:id="@+id/lbl_thesis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/edt_registration"
                        android:layout_alignStart="@+id/edt_registration"
                        android:layout_below="@+id/edt_thesis"
                        android:layout_marginBottom="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="30dp"
                        android:drawableEnd="@drawable/ic_edit_black_24dp"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/ic_edit_black_24dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/chesis_number"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorGray"
                        android:textSize="13sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_filled_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txt_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="40dp"
                        android:drawableEnd="@drawable/ic_edit_black_24dp"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/ic_edit_black_24dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/regis_no"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorGray"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/txt_thesis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_registration"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:drawableEnd="@drawable/ic_edit_black_24dp"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/ic_edit_black_24dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/thesis_no"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorGray"
                        android:textSize="13sp" />
                </RelativeLayout>
            </FrameLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_customer_registration" />

    <FrameLayout
        android:id="@+id/frmFabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|end|right">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="visible"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_done_black_24dp" />

        <ImageButton
            android:id="@+id/custom_fab"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:tint="@android:color/white"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_done_black_24dp" />


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:tint="@android:color/white"
            android:visibility="gone" />


    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="40dp"
        android:backgroundTint="#CF6F55"
        android:scaleType="center"
        android:visibility="gone"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_pre" />

</android.support.design.widget.CoordinatorLayout>
